app: 完善查询列表面板逻辑